[mod] 아이템 수정 후 상세정보 ui를 업데이트하는 로직을 상세 정보 fetch api를 호출하는 방식으로 수정

--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -193,7 +193,7 @@
                             android:layout_height="wrap_content"
                             android:clickable="false"
                             android:hint="@string/folder"
-                            android:text="@{viewModel.folderItem.name == null ? viewModel.wishItem.folderName : viewModel.folderItem.name}"
+                            android:text="@{viewModel.folderItem.name == null ? viewModel.wishItemDetail.folderName : viewModel.folderItem.name}"
                             android:textAppearance="@style/Item.Basic.Upload.EditText.TextAppearance"
                             android:textColorHint="@color/gray_700"
                             app:layout_constraintBottom_toBottomOf="parent"
