[mod] 상세뷰에서 수정 후 장바구니 화면 복귀 시 ui 업데이트 로직 변경

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -51,6 +51,7 @@
             android:background="@drawable/shape_border_radius_10"
             android:foreground="@color/semi_transparent"
             android:scaleType="centerCrop"
+            app:imageUrl="@{item.wishItem.image == null ? item.wishItem.imageUrl : item.wishItem.image}"
             app:layout_constraintBottom_toBottomOf="@id/guild_bottom"
             app:layout_constraintStart_toStartOf="@id/guild_start"
             app:layout_constraintTop_toTopOf="@id/guild_top" />
