--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -163,8 +163,8 @@
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="@dimen/spacingBase"
                     android:layout_marginBottom="@dimen/spacingBase"
-                    android:enabled="@{viewModel.itemName.length() > 0 ? true : false}"
-                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.wish_list_registration_button_text)}"
+                    android:enabled="@{viewModel.isEnabledUploadButton}"
+                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(viewModel.token == null ? R.string.wish_list_registration_button_text_for_unregister_user : R.string.wish_list_registration_button_text)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:text="@string/wish_list_registration_button_text" />
 
@@ -190,11 +190,11 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="-40dp"
             android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/Style.CircleImageView.Half"
             app:layout_constraintBottom_toTopOf="@id/container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@mipmap/ic_main" />
+            app:shapeAppearanceOverlay="@style/Style.CircleImageView.Half"
+            tools:src="@drawable/ic_app_logo_black" />
 
         <TextView
             android:id="@+id/networkView"
