--- a/app/src/main/res/layout/item_calendar_noti.xml
+++ b/app/src/main/res/layout/item_calendar_noti.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.hyeeyoung.wishboard.data.model.noti.NotiItem" />
+            type="com.hyeeyoung.wishboard.domain.entity.NotiItemInfo" />
 
         <import type="com.hyeeyoung.wishboard.presentation.noti.types.ReadStateType" />
 
