[chore] 알림 관련 레이아웃에서 썸네일 이미지를 ImageView -> ShapeableImageView 로 변경

--- a/app/src/main/res/layout/item_calendar_noti.xml
+++ b/app/src/main/res/layout/item_calendar_noti.xml
@@ -27,15 +27,16 @@
         android:backgroundTint="#EFEFEF"
         android:padding="@dimen/spacingBase">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/item_image"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:background="@drawable/shape_border_radius_40"
             android:scaleType="centerCrop"
+            app:imageUrl="@{item.itemImg}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:clipToOutline="true"
+            app:shapeAppearanceOverlay="@style/Style.CircleImageView.Half"
             tools:src="@drawable/sample" />
 
         <TextView
