--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -81,15 +81,15 @@
                     android:id="@+id/image_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/shape_border_radius_32"
+                    android:backgroundTint="@color/gray_50"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
                         android:id="@+id/item_image"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:background="@drawable/shape_border_radius_32"
-                        android:backgroundTint="@color/gray_50"
-                        android:scaleType="centerInside"
+                        android:adjustViewBounds="true"
                         app:layout_constraintDimensionRatio="2:1"
                         app:layout_constraintTop_toTopOf="parent" />
 
