[fix] 프로필 이미지와 닉네임 중 어느 하나만 변경되어도 편집 버튼이 활성화되도록 버그 수정

--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -138,7 +138,7 @@
             style="@style/Widget.Button.Full.Round.Activate.Green"
             android:layout_marginTop="@dimen/spacing20"
             android:layout_marginBottom="@dimen/spacingBase"
-            android:enabled="@{viewModel.isEnabledEditCompleteButton()}"
+            android:enabled="@{viewModel.isEnabledEditCompleteButton}"
             android:text="@{viewModel.profileEditStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.complete)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
