[fix] 폴더 미지정 시 폴더를 지정해 보세요 문구가 보이지 않는 버그 수정

--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -167,7 +167,7 @@
                         android:fontFamily="@font/suit_r"
                         android:paddingHorizontal="@dimen/spacingBase"
                         android:paddingVertical="@dimen/spacing10"
-                        android:text="@{String.format(context.getString(R.string.go_to_folder), viewModel.itemDetail.folderName == null ? context.getString(R.string.setting_folder) : viewModel.itemDetail.folderName)}"
+                        android:text="@{@string/go_to_folder(viewModel.itemDetail.folderName == null ? context.getString(R.string.setting_folder) : viewModel.itemDetail.folderName)}"
                         android:textColor="@color/gray_300"
                         android:textSize="@dimen/typographyDescription"
                         app:layout_constraintBottom_toBottomOf="@id/create_at"
