--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <!-- Radius -->
     <dimen name="radiusMicro">5dp</dimen>
     <dimen name="radiusSmall">10dp</dimen>
+    <dimen name="radiusBase">16dp</dimen>
     <dimen name="radiusLarge">32dp</dimen>
     <dimen name="spacing20">20dp</dimen>
 
