--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -164,7 +164,7 @@
                     android:layout_marginHorizontal="@dimen/spacingBase"
                     android:layout_marginBottom="@dimen/spacingBase"
                     android:enabled="@{viewModel.isEnabledUploadButton}"
-                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(viewModel.token == null ? R.string.wish_list_registration_button_text_for_unregister_user : R.string.wish_list_registration_button_text)}"
+                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(viewModel.isLogin == false ? R.string.wish_list_registration_button_text_for_unregister_user : R.string.wish_list_registration_button_text)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:text="@string/wish_list_registration_button_text" />
 
