[feat] fcm 토큰 api response 변경사항 반영

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -12,6 +12,8 @@
 
         <import type="com.hyeeyoung.wishboard.R" />
 
+        <import type="com.hyeeyoung.wishboard.presentation.sign.SignType" />
+
         <import type="androidx.navigation.Navigation" />
 
         <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
@@ -144,7 +146,7 @@
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.validPasswordFormat == true}"
-            android:onClick="@{() -> viewModel.signUp()}"
+            android:onClick="@{() -> viewModel.requestSign(SignType.SIGN_UP)}"
             android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_up)}"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/sign_up" />
