--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -12,6 +12,8 @@
 
         <import type="com.hyeeyoung.wishboard.R" />
 
+        <import type="com.hyeeyoung.wishboard.presentation.sign.SignType" />
+
         <import type="androidx.navigation.Navigation" />
 
         <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
@@ -97,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginTop="@dimen/spacingBase"
                 android:enabled="@{viewModel.loginEmail.length() > 0 &amp;&amp; viewModel.loginPassword.length() > 0}"
-                android:onClick="@{() -> viewModel.signIn()}"
+                android:onClick="@{() -> viewModel.requestSign(SignType.SIGN_IN)}"
                 android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_in)}"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/sign_in"/>
