--- a/app/src/main/res/layout/fragment_sign_in_verification_code.xml
+++ b/app/src/main/res/layout/fragment_sign_in_verification_code.xml
@@ -12,6 +12,8 @@
 
         <import type="com.hyeeyoung.wishboard.R" />
 
+        <import type="com.hyeeyoung.wishboard.presentation.sign.SignType" />
+
         <import type="android.view.View" />
 
         <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
@@ -149,7 +151,7 @@
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.isEnabledVerificationCodeButton() == true}"
-            android:onClick="@{() -> viewModel.signInEmail()}"
+            android:onClick="@{() -> viewModel.requestSign(SignType.SIGN_IN_BY_EMAIL)}"
             android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_in)}"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/sign_in" />
