--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -23,7 +23,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/spacingBase"
+            android:paddingVertical="@dimen/spacing14"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -48,96 +48,96 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/gl_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_begin="@dimen/spacingBase" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/gl_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_end="@dimen/spacingBase" />
+
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="34dp"
+                    android:background="@drawable/shape_border_radius_45"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_background_user_profile"
+                    app:layout_constraintStart_toStartOf="@id/gl_start"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/user_profile_container"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/spacingBase"
-                    android:background="@drawable/shape_border_radius_32"
-                    android:backgroundTint="@color/black"
-                    android:paddingVertical="@dimen/spacing20"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/profile_image_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <ImageView
-                            android:id="@+id/profile_image"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:background="@drawable/shape_border_radius_45"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_background_user_profile"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <ImageButton
-                            android:id="@+id/camera"
-                            style="@style/Widget.Button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="-20dp"
-                            android:layout_marginBottom="1dp"
-                            android:src="@drawable/ic_camera"
-                            app:layout_constraintBottom_toBottomOf="@id/profile_image"
-                            app:layout_constraintStart_toEndOf="@id/profile_image"
-                            app:tint="@color/green_500" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_marginStart="@dimen/spacingBase"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintBottom_toBottomOf="@id/profile_image"
+                    app:layout_constraintEnd_toStartOf="@id/profile_edit"
+                    app:layout_constraintStart_toEndOf="@id/profile_image"
+                    app:layout_constraintTop_toTopOf="@id/profile_image">
 
                     <TextView
                         android:id="@+id/user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacingBase"
-                        android:fontFamily="@font/montserrat_b"
+                        android:fontFamily="@font/suit_b"
                         android:text="@{viewModel.userNickname}"
-                        android:textColor="@color/white"
+                        android:textColor="@color/gray_700"
                         android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/profile_image_container"
-                        tools:text="wish201801" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="새침한 진주" />
 
                     <TextView
                         android:id="@+id/user_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/spacingSmall"
-                        android:fontFamily="@font/suit_r"
+                        android:fontFamily="@font/suit_m"
                         android:text="@{viewModel.userEmail}"
                         android:textColor="@color/gray_200"
-                        android:textSize="@dimen/typographyDescription"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:textSize="@dimen/typographyBaseDetail"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/user_name"
                         tools:text="wishboard@gmail.com" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/profile_edit"
+                    style="@style/Widget.Material.Button.Basic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/gray_50"
+                    android:fontFamily="@font/suit_m"
+                    android:paddingHorizontal="@dimen/spacing10"
+                    android:paddingVertical="@dimen/spacing5"
+                    android:text="@string/my_profile_edit"
+                    android:textColor="@color/gray_600"
+                    android:textSize="@dimen/typographyDescription"
+                    app:cornerRadius="@dimen/spacing12"
+                    app:layout_constraintBottom_toBottomOf="@id/profile_image"
+                    app:layout_constraintEnd_toEndOf="@id/gl_end"
+                    app:layout_constraintTop_toTopOf="@id/profile_image" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="48dp"
                     android:orientation="vertical"
                     android:paddingBottom="100dp"
                     app:layout_constraintTop_toBottomOf="@id/user_profile_container">
 
-                    <TextView
-                        style="@style/My.Section.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/my_section_title_settings"
-                        android:textAppearance="@style/My.Section.Title.TextAppearance" />
-
                     <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        style="@style/My.Menu.Divider"
+                        android:layout_width="match_parent" />
 
                     <LinearLayout
                         android:id="@+id/noti_settings"
@@ -146,12 +146,12 @@
                         android:gravity="center_vertical">
 
                         <TextView
-                            style="@style/My.Section.SubTitle"
+                            style="@style/My.Menu.Style"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/noti_setting"
-                            android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
+                            android:textAppearance="@style/My.Menu.TextAppearance" />
 
                         <com.google.android.material.switchmaterial.SwitchMaterial
                             android:id="@+id/noti_switch"
@@ -165,99 +165,57 @@
 
                     </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
-
                     <TextView
-                        style="@style/My.Section.Title"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/change_password"
+                        style="@style/My.Menu.Style"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/my_section_title_customer_support"
-                        android:textAppearance="@style/My.Section.Title.TextAppearance" />
+                        android:text="@string/my_section_sub_title_edit_password"
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        style="@style/My.Menu.Divider"
+                        android:layout_width="match_parent" />
 
                     <TextView
                         android:id="@+id/contact_us"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_contact_us"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
-
-                    <TextView
-                        style="@style/My.Section.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/my_section_title_service_info"
-                        android:textAppearance="@style/My.Section.Title.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <TextView
                         android:id="@+id/how_to_use"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_how_to_use"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <TextView
                         android:id="@+id/terms"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_terms"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <TextView
                         android:id="@+id/personal_info"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_personal_info"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <TextView
                         android:id="@+id/opensource_license"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_opensource_license"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -266,13 +224,13 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            style="@style/My.Section.SubTitle"
+                            style="@style/My.Menu.Style"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:paddingVertical="@dimen/spacing12"
                             android:text="@string/my_section_sub_title_version_info"
-                            android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
+                            android:textAppearance="@style/My.Menu.TextAppearance" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -285,53 +243,26 @@
                     </LinearLayout>
 
                     <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
-
-                    <TextView
-                        style="@style/My.Section.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/my_section_title_account_management"
-                        android:textAppearance="@style/My.Section.Title.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        style="@style/My.Menu.Divider"
+                        android:layout_width="match_parent" />
 
                     <TextView
                         android:id="@+id/logout"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_logout"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
 
                     <TextView
                         android:id="@+id/exit"
-                        style="@style/My.Section.SubTitle"
+                        style="@style/My.Menu.Style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/my_section_sub_title_exit"
-                        android:textAppearance="@style/My.Section.SubTitle.TextAppearance" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/gray_100" />
-
-
+                        android:textAppearance="@style/My.Menu.TextAppearance" />
                 </LinearLayout>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
