--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <color name="green_700">#31E864</color>
     <color name="green_600">#68EB72</color>
-    <color name="green_500">#73F87C</color>
+    <color name="green_500">#95FB9D</color>
     <color name="green_200">#DEFDE0</color>
     <color name="green_100">#EEFEEF</color>
 
