--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.sign.screens.SignInFragment">
+    tools:context=".presentation.my.screens.MyPasswordChangeFragment">
 
     <data>
 
@@ -106,6 +106,7 @@
             style="@style/Widget.Button.Full.Round.Activate.Green"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
+            android:onClick="@{() -> viewModel.changePassword()}"
             android:text="@string/complete"
             app:layout_constraintBottom_toBottomOf="parent" />
 
