[feat] 비밀번호 변경 완료버튼 활성화 처리 구현

--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -69,6 +69,7 @@
             android:hint="@string/my_new_password_hint"
             android:inputType="textPassword"
             android:maxLines="1"
+            android:text="@={viewModel.newPassword}"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +99,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingVertical="@dimen/spacing12"
+            android:text="@={viewModel.reNewPassword}"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
             app:layout_constraintTop_toBottomOf="@id/password_re_write_label" />
 
@@ -106,6 +108,7 @@
             style="@style/Widget.Button.Full.Round.Activate.Green"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
+            android:enabled="@{viewModel.isEnabledPasswordCompleteButton()}"
             android:onClick="@{() -> viewModel.changePassword()}"
             android:text="@string/complete"
             app:layout_constraintBottom_toBottomOf="parent" />
