[feat] 비밀번호 변경 디테일 메세지 visibility 조절 구현

--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -79,6 +79,18 @@
         </EditText>
 
         <TextView
+            android:id="@+id/password_detail_message"
+            style="@style/Widget.TextAppearance.Detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="@string/sign_password_detail"
+            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
+            app:layout_constraintStart_toStartOf="@id/password_input"
+            app:layout_constraintTop_toBottomOf="@id/password_input"
+            app:visibility="@{!viewModel.newPassword.empty &amp;&amp; !viewModel.isValidPassword()}" />
+
+        <TextView
             android:id="@+id/password_re_write_label"
             style="@style/Widget.EditText.Label.Style"
             android:layout_width="wrap_content"
@@ -87,7 +99,7 @@
             android:text="@string/my_new_password_re_write"
             android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/password_input" />
+            app:layout_constraintTop_toBottomOf="@id/password_detail_message" />
 
         <EditText
             android:id="@+id/password_re_write_input"
@@ -102,6 +114,18 @@
             android:text="@={viewModel.reNewPassword}"
             android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
             app:layout_constraintTop_toBottomOf="@id/password_re_write_label" />
+
+        <TextView
+            android:id="@+id/password_re_write_detail_message"
+            style="@style/Widget.TextAppearance.Detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="@string/my_password_mismatch_detail"
+            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
+            app:layout_constraintStart_toStartOf="@id/password_re_write_input"
+            app:layout_constraintTop_toBottomOf="@id/password_re_write_input"
+            app:visibility="@{!viewModel.reNewPassword.empty &amp;&amp; !viewModel.newPassword.equals(viewModel.reNewPassword)}" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/complete"
