[feat] 비밀번호 변경뷰 완료 버튼 Lottie visibility 조절 구현

--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -12,7 +12,7 @@
 
         <import type="androidx.navigation.Navigation" />
 
-        <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
+        <import type="com.hyeeyoung.wishboard.util.UiState" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -134,21 +134,25 @@
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.isEnabledPasswordCompleteButton()}"
             android:onClick="@{() -> viewModel.changePassword()}"
-            android:text="@string/complete"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:lottieState="@{viewModel.passwordChangeState}"
+            app:textForLottieButton="@{@string/complete}"
+            tools:text="@string/complete" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading_lottie"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/complete"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/complete"
+            app:lottie_autoPlay="true"
             app:lottie_fileName="lottie/loading_horizontal_black.json"
             app:lottie_imageAssetsFolder="lottie"
-            app:lottie_loop="true" />
+            app:lottie_loop="true"
+            app:visibility="@{viewModel.passwordChangeState}"
+            tools:visibility="gone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
