--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -204,7 +204,7 @@
         <item name="android:textColor">@color/pink</item>
         <item name="android:textSize">@dimen/typographyDescription</item>
         <item name="fontFamily">@font/suit_r</item>
-        <item name="android:layout_marginTop">@dimen/spacing5</item>
+        <item name="android:layout_marginTop">6dp</item>
     </style>
 
     <style name="Widget.TextAppearance.NoItemView.Detail" parent="">
