[chore] 변수명 수정 및 코드 정리

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -69,7 +69,7 @@
                     android:layout_marginTop="34dp"
                     android:background="@drawable/ic_background_user_profile"
                     android:scaleType="centerCrop"
-                    app:image="@{viewModel.userProfileImageUri}"
+                    app:image="@{viewModel.userProfileImage}"
                     app:layout_constraintStart_toStartOf="@id/gl_start"
                     app:layout_constraintTop_toTopOf="parent"
                     app:shapeAppearanceOverlay="@style/Style.CircleImageView.Half" />
