[feat] 장바구니 삭제 다이얼로그 띄우기 구현

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cart_no_item_view"
-            android:visibility="@{viewModel.cartList.size() > 0 ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.cartList.size > 0 ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toTopOf="@id/cart_total_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:fontFamily="@font/montserrat_b"
-                android:text="@{Integer.toString(viewModel.cartList.size())}"
+                android:text="@{Integer.toString(viewModel.cartList.size)}"
                 android:textColor="@color/gray_700"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
